logs/watchdog_20251012_0045.log
[12/10/2025  0:45:01,65] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[12/10/2025  0:45:01,87] END WATCHDOG 
